# OpenZKP

./: .codecov.yml  .dockerignore  .dockerignore-ci  .gitattributes  .gitignore  Cargo.toml  Code_of_conduct.md  Codeguidelines.md  ConstraintPoly.sol  MemoryMap.sol  Odds.sol  Readme.md  Readme.next.md  Security.md  bench.sh  lints.rs  lints_check.sh  package-lock.json  periodic0.sol  periodic1.sol  periodic2.sol  periodic3.sol  rustfmt.toml
0xchain/substrate-node/: Cargo.toml  Dockerfile
0xchain/substrate-node/src/: assets.rs  chain_spec.rs  cli.rs  main.rs  service.rs
algebra/elliptic-curve/: Cargo.toml
algebra/elliptic-curve/benches/: benchmark.rs
algebra/elliptic-curve/src/: curve.rs  jacobian.rs  lib.rs  proptest.rs  scalar_field.rs  wnaf.rs
algebra/primefield/: Benchmark.ipynb  Cargo.toml  Readme.md  fft.sh
algebra/primefield/benches/: benchmark.rs  fft.rs  field.rs  permute.rs  transpose.rs
algebra/primefield/benchmarks/: Cargo.toml  Readme.md
algebra/primefield/examples/: fft.rs
algebra/primefield/proptest-regressions/: fft.txt  transpose.txt
algebra/primefield/src/: const_generics.rs  convert.rs  fft.md  fft.rs  field.rs  field_element.rs  geometric_series.rs  invert_batch.rs  lib.rs  montgomery.rs  ops.rs  parity_codec.rs  prime_field.rs  proptest.rs  proth_field.rs  rand.rs  serde.rs  square_root.rs  test.rs  traits.rs  transpose.rs  uint.rs
algebra/u256/: Cargo.toml  Readme.md
algebra/u256/benches/: benchmark.rs
algebra/u256/src/: add.rs  additive.rs  binary.rs  binops.rs  conversion.rs  div.rs  division.rs  encoding.rs  functions.rs  gcd.rs  lib.rs  mul.rs  multiplicative.rs  rand.rs  traits.rs  u256.rs  u256_traits.rs
benchmarks/: Cargo.toml  Readme.md
benchmarks/benches/: benchmark.rs  curve25519_donna.rs  dalek.rs  ed25519_dalek.rs  gmp.rs  matter.rs  secp256k1_bindings.rs  secp256k1_native.rs  starkcrypto.rs
benchmarks/matter/src/: lib.rs
crypto/elliptic-curve-crypto/: Cargo.toml  Readme.md
crypto/elliptic-curve-crypto/benches/: benchmark.rs
crypto/elliptic-curve-crypto/src/: lib.rs  private_key.rs  public_key.rs  signature.rs
crypto/hash/: Cargo.toml  Readme.md
crypto/hash/src/: hash.rs  hashable.rs  lib.rs  masked_keccak.rs
crypto/merkle-tree/: Cargo.toml  Readme.md
crypto/merkle-tree/benches/: benchmark.rs
crypto/merkle-tree/proptest-regressions/: index.txt
crypto/merkle-tree/src/: commitment.rs  index.rs  lib.rs  node.rs  proof.rs  result.rs  tree.rs  vector_commitment.rs
crypto/openstark/: Cargo.toml
crypto/openstark/benches/: benchmark.rs
crypto/openstark/examples/: large_fib.rs  mimc_cubic.rs  mimc_hash.rs  mimc_quadratic.rs  mimc_tree.rs  opt_layering.rs  small_fib.rs  starkware_pedersen_merkle.rs  starkware_pedersen_merkle.rs.dis  vdf.rs  vfd.rs
crypto/openstark/src/: algebraic_dag.rs  channel.rs  constraint.rs  constraint_system.rs  constraints.rs  degree_adjustment.md  fibonacci.rs  lib.rs  polynomial.rs  proof.md  proof.rs  proof_of_work.rs  proof_params.rs  proofs.rs  prover.rs  rational_expression.rs  solidity_encode.rs  trace_table.rs  traits.rs  verifier.md  verifier.rs
crypto/stark/: Cargo.toml  Performance analysis.ipynb  Readme.md
crypto/stark/.cargo/: katex-header.html
crypto/stark/assets/: OodsPoly.sol  Periodic.sol  Trace.sol  Wrapper.sol
crypto/stark/benches/: benchmark.rs
crypto/stark/examples/: claim_polynomial.rs  constant.rs  large_fib.rs  mimc_cubic.rs  mimc_hash.rs  mimc_quadratic.rs  mimc_tree.rs  small_fib.rs  vdf.rs
crypto/stark/proptest-regressions/: verifier.txt
crypto/stark/src/: algebraic_dag.rs  algebraic_expression.rs  autogen_sol.rs  channel.rs  component.rs  constraint_check.rs  constraints.rs  lib.rs  pedersen.rs  polynomial.rs  proof.rs  proof_of_work.rs  prover.rs  rational_equality.rs  rational_expression.rs  solidity_encode.rs  solidity_seralizer.rs  solidity_verifier.rs  trace_table.rs  traits.rs  verifier.rs
ecc/: Cargo.toml
ecc/benches/: benchmark.rs
ecc/src/: curve.rs  ecdsa.rs  jacobian.rs  lib.rs  wnaf.rs
primefield/: Cargo.toml
primefield/benches/: benchmark.rs  fft.rs  field.rs
primefield/benchmarks/: Cargo.toml
primefield/benchmarks/benches/: benchmark.rs  curve25519_donna.rs  starkcrypto.rs
primefield/benchmarks/matter/: Cargo.toml
primefield/benchmarks/src/: main.rs
primefield/src/: fft.rs  field.rs  gcd.rs  geometric_series.rs  lib.rs  montgomery.rs  square_root.rs  utils.rs
stark/: Cargo.toml
stark/benches/: benchmark.rs
stark/examples/: large_fib.rs  small_fib.rs  small_pedersen_merkle.rs  starkware_pedersen_merkle.rs
stark/src/: channel.rs  constraint.rs  constraint_system.rs  constraints.rs  fft.rs  fibonacci.rs  fibonacci2.rs  geometric_series.rs  hash.rs  hashable.rs  lib.rs  masked_keccak.rs  merkle.rs  merkle_index.rs  mmap_vec.rs  polynomial.rs  proof_of_work.rs  proof_params.rs  proofs.rs  rational_expression.rs  trace_table.rs  utils.rs  verifier.rs
stark/src/merkle_tree/: commitment.rs  index.rs  merkelizable.rs  mod.rs  node.rs  proof.rs  result.rs  root.rs  tree.rs  vector_commitment.rs
stark/src/pedersen_merkle/: constraints.rs  input.rs  inputs.rs  mod.rs  periodic_columns.json  periodic_columns.rs  proof.rs  public_input.json  trace_table.rs
stark/src/starkdex/: mod.rs  trace_table.rs
starkdex/: Cargo.toml
starkdex/benches/: benchmark.rs
starkdex/src/: lib.rs  orders.rs  pedersen.rs  pedersen_points.rs  wrappers.rs
substrate-node/runtime/: Cargo.toml
substrate-runtime-wasm/: Cargo.toml
substrate-runtime-wasm/.cargo/: config
substrate-runtime-wasm/src/: lib.rs
u256/: Cargo.toml
u256/benches/: benchmark.rs
u256/src/: binops.rs  division.rs  gcd.rs  lib.rs  u256.rs  utils.rs
utils/criterion-utils/: Cargo.toml
utils/error-utils/: Cargo.toml  Readme.md
utils/error-utils/src/: lib.rs
utils/logging-allocator/: Cargo.toml  Readme.md
utils/macros-decl/: Cargo.toml  Readme.md
utils/macros-impl/: Cargo.toml  Readme.md
utils/macros-lib/: Cargo.toml
utils/mmap-vec/: Cargo.toml  Readme.md
wasm/: Cargo.toml  Readme.md
wasm/src/: lib.rs
wasm/tests/: node.js  web.rs
(+554 files in other folders)
