[workspace]
members = [
    "utils/macros-lib",
    "utils/macros-impl",
    "utils/macros-decl",
    "utils/criterion-utils",
    "utils/error-utils",
    "utils/logging-allocator",
    "utils/mmap-vec",
    "algebra/u256",
    "algebra/primefield",
    "algebra/elliptic-curve",
    "crypto/hash",
    "crypto/merkle-tree",
    "crypto/elliptic-curve-crypto",
    "crypto/openstark",
]

[profile.release]
opt-level = 3
lto = true
panic = 'unwind'

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", ".cargo/katex-header.html"]
