[package]
name = "primefield"
version = "0.1.0"
authors = ["Remco Bloemen <remco@0x.org>"]
edition = "2018"

[dependencies]
# TODO - This compiles u256 without standard, and we might want to avoid that as the default
u256 =  { path = "../u256", default-features = false}
hex = ""
itertools = "0.8.0"
crunchy = "0.2.2"
quickcheck = {version = "0.8", optional = true}
macros-decl = { path = "../macros_decl" }
no-std-compat = { version = "0.1.0", features = [ "alloc" ] }

[dev-dependencies]
u256 =  { path = "../u256", features = ["quickcheck"]} 
criterion = "0.2.10"
quickcheck = "0.8"
quickcheck_macros = "0.8"

[[bench]]
name = "benchmark"
harness = false

[features]
default = [ "std" ] # Default to using the std
std = [ "no-std-compat/std" ]