[package]
name = "primefield"
version = "0.1.0"
authors = ["Remco Bloemen <remco@0x.org>"]
edition = "2018"

[dependencies]
hex = { version = "", optional = true }
itertools = { version = "0.8.0", default_features = false }
crunchy = { version = "0.2.2", default_features = false }
quickcheck = { version = "0.8", optional = true}
macros-decl = { path = "../macros_decl",  default_features = false }
u256 =  { path = "../u256", default_features = false } 

# HACK: Criterion is really a dev-dependency, but it's important that it's
# optional, or it will enable the `std` flag on various dependencies. Cargo
# does not allow dev-dependencies to be optional.
criterion = { version = "0.2.0", optional = true }

# no-std dependencies
[target.'cfg(not(feature="std"))'.dependencies]
no-std-compat = { version = "0.1.0", features = [ "alloc" ] }

[dev-dependencies]
quickcheck_macros = "0.8"

[[bench]]
name = "benchmark"
harness = false
required-features = ["std", "bench"]

[features]
default = [ "std" ]
bench = ["criterion"]
test = [
    "quickcheck",
    "u256/test"
]
std = [
    "u256/std",
    "no-std-compat/std",
    "itertools/use_std",
    "crunchy/std",
    "macros-decl/std",
    "hex"
]
