[package]
name = "stark"
version = "0.1.0"
authors = ["Remco Bloemen <remco@0x.org>"]
edition = "2018"

[dependencies]
u256 =  { path = "../u256" }
primefield =  { path = "../primefield" }
ecc =  { path = "../ecc" }
starkdex = {path = "../starkdex"}
crossbeam = "0.3.0"
rayon = "1.0.3"
hex = ""
hex-literal = "0.1.4"
tiny-keccak = "1.4.2"
lazy_static = "1.3.0"
itertools = "0.8.0"
crunchy = "0.2.2"
memmap = ""
tempfile = ""
serde_json = ""
serde = { version = "1.0.80", features = ["derive"] }

[dev-dependencies]
primefield = { path = "../primefield", features = ["quickcheck"]}
u256 =  { path = "../u256", features = ["quickcheck"] }
quickcheck = "0.8"
quickcheck_macros = "0.8"
criterion = "0.2.10"
num_cpus = "1.10.1"

[[bench]]
name = "benchmark"
harness = false
