[package]
name = "stark"
version = "0.1.0"
authors = ["Remco Bloemen <remco@0x.org>"]
edition = "2018"

[dependencies]
crossbeam = "0.3.0"
rayon = "1.0.3"
hex = ""
tiny-keccak = "1.4.2"
lazy_static = "1.3.0"
itertools = "0.8.0"
crunchy = "0.2.2"
macros-decl = { path = "../macros_decl" }
memmap = { version = "^0.7.0", optional = true }
tempfile = { version = "^3.1.0", optional = true }

# no-std dependencies
[target.'cfg(not(feature="std"))'.dependencies]
no-std-compat = { version = "0.1.0", features = [ "alloc" ] }
u256 =  { path = "../u256", default-features = false }
ecc = { path = "../ecc", default-features = false }
starkdex = { path = "../starkdex", default-features = false }
primefield =  { path = "../primefield", default-features = false }

# std dependencies
[target.'cfg(feature="std")'.dependencies]
u256 =  { path = "../u256" }
ecc = { path = "../ecc"}
starkdex = { path = "../starkdex"}
primefield =  { path = "../primefield"}

[dev-dependencies]
primefield = { path = "../primefield", features = ["quickcheck"]}
u256 =  { path = "../u256", features = ["quickcheck"] }
quickcheck = "0.8"
quickcheck_macros = "0.8"
criterion = "0.2.10"
num_cpus = "1.10.1"

[[bench]]
name = "benchmark"
harness = false

[features]
# Default to using the std with mmaped large vectors
default = ["std", "mmap"]
std = [ "no-std-compat/std" ]
mmap = [ "memmap", "tempfile" ]
