[package]
name = "stark"
version = "0.1.0"
authors = ["Remco Bloemen <remco@0x.org>"]
edition = "2018"

[dependencies]
macros-decl = { path = "../macros_decl", default-features = false }
u256 = { path = "../u256", default-features = false }
primefield = { path = "../primefield", default-features = false }
ecc = { path = "../ecc", default-features = false }
starkdex = { path = "../starkdex", default-features = false }
no-std-compat = { version = "0.1.0", features = [ "alloc" ] }
itertools = { version = "0.8.0", default_features = false }
lazy_static = { version = "1.3.0", features = [ "spin_no_std" ] } # TODO: When `std` is set we want this feature off!
tiny-keccak = "1.5.0"
rayon = { version = "1.0.3", optional = true }
memmap = { version = "^0.7.0", optional = true }
tempfile = { version = "^3.1.0", optional = true }
quickcheck = { version = "0.8", optional = true }

# HACK: Criterion is really a dev-dependency, but it's important that it's
# optional, or it will enable the `std` flag on various dependencies. Cargo
# does not allow dev-dependencies to be optional.
criterion = { version = "0.2.0", optional = true }
quickcheck_macros = { version = "0.8", optional = true }
num_cpus = { version = "1.10.1", optional = true }
hex = { version = "0.3.2", optional = true }

[[bench]]
name = "benchmark"
harness = false
required-features = ["bench"]

[features]
default = [ "std", "prover" ]
std = [
    "macros-decl/std",
    "u256/std",
    "primefield/std",
    "ecc/std",
    "starkdex/std",
    "no-std-compat/std",
    "itertools/use_std",
    "rayon",
    "hex"
]
test = [
    "u256/test",
    "primefield/test",
    "ecc/test",
    "starkdex/test",
    "quickcheck",
    "quickcheck_macros",
    "hex",
]
bench = [
    "criterion",
    "num_cpus",
]
mmap = [
    "std",
    "memmap",
    "tempfile"
]
prover = [
    "std", # TODO: Make prove run in no-std wasm.
]
