[package]
name = "starkdex"
version = "0.1.0"
authors = ["Remco Bloemen <remco@0x.org>"]
edition = "2018"

[dependencies]
u256 =  { path = "../u256" }
primefield =  { path = "../primefield" }
ecc =  { path = "../ecc", features=["unsafe_ecdsa"]  }
hex = ""
hex-literal = "0.1.4"
itertools = "0.8.0"
crunchy = "0.2.2"

[dev-dependencies]
criterion = "0.2.10"

[[bench]]
name = "benchmark"
harness = false
