[package]
name = "starkdex"
version = "0.1.0"
authors = ["Remco Bloemen <remco@0x.org>"]
edition = "2018"

[dependencies]
u256 =  { path = "../u256", default-features = false }
primefield =  { path = "../primefield", default-features = false }
ecc =  { path = "../ecc", features=["unsafe_ecdsa"], default-features = false  }
hex = ""
itertools = "0.8.0"
crunchy = "0.2.2"
macros-decl = { path = "../macros_decl" }
no-std-compat = { version = "0.1.0", features = [ "alloc" ] }

[dev-dependencies]
criterion = "0.2.10"

[[bench]]
name = "benchmark"
harness = false

[features]
default = [ "std" ] # Default to using the std
std = [ "no-std-compat/std" ]