[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'substrate-node-runtime-wasm'
version = '1.0.0'

# This project compiles to wasm and therefore has different build profiles
[workspace]
members = []

[lib]
crate-type = ['cdylib']

[dependencies]
substrate-runtime = { path = '../substrate-runtime', default-features = false }

[features]
default = []
std = ['substrate-runtime/std']

[profile.release]
lto = true
panic = 'abort'

