[package]
name = "u256"
version = "0.1.0"
authors = ["Remco Bloemen <remco@0x.org>"]
edition = "2018"

[dependencies]
hex = ""
itertools = "0.8.0"
crunchy = "0.2.2"
quickcheck = { version = "0.8", optional = true }
macros-decl = { path = "../macros_decl" }

[dev-dependencies]
criterion = "0.2.10"
quickcheck_macros = "0.8"
quickcheck = "0.8"

[[bench]]
name = "benchmark"
harness = false
