[package]
name = "u256"
version = "0.1.0"
authors = ["Remco Bloemen <remco@0x.org>"]
edition = "2018"
autobenches = false

[dependencies]
itertools = { version = "0.8.0", default_features = false }
crunchy = { version = "0.2.2", default_features = false }
hex = { version = "", optional = true }
quickcheck = { version = "0.8", optional = true }
macros-decl = { path = "../macros_decl", default_features = false }

# Criterion is really a dev-dependency, but it's important that it's optional,
# or it will enable the `std` flag on various dependencies. Cargo does not allow
# dev-dependencies to be optional.
criterion = { version = "0.2.0", optional = true }

[target.'cfg(not(feature="std"))'.dependencies]
no-std-compat = { version = "0.1.0", features = [ "alloc" ] }

[dev-dependencies]
quickcheck_macros = "0.8"
quickcheck = "0.8"

[features]
default = ["std"] # Default to using the std
std = [
    "no-std-compat/std",
    "itertools/use_std",
    "crunchy/std",
    "macros-decl/std",
    "hex"
]
bench = ["criterion"]

[[bench]]
name = "benchmark"
harness = false
