[package]
authors = ['Parity Technologies <admin@parity.io>']
build = 'build.rs'
edition = '2018'
name = 'substrate-node'
version = '1.0.0'

[dependencies]
substrate-runtime = { path = '../substrate-runtime' }

error-chain = '0.12'
exit-future = '0.1'
futures = '0.1'
hex-literal = '0.1'
log = '0.4'
parity-codec = '3.2'
parking_lot = '0.7.1'
tokio = '0.1'
trie-root = '0.12.0'

[dependencies.basic-authorship]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-basic-authorship'
rev = 'fc206f3a009b64fc746202e5b4c701bf7e24d1f1'

[dependencies.consensus]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-aura'
rev = 'fc206f3a009b64fc746202e5b4c701bf7e24d1f1'

[dependencies.ctrlc]
features = ['termination']
version = '3.0'

[dependencies.inherents]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-inherents'
rev = 'fc206f3a009b64fc746202e5b4c701bf7e24d1f1'

[dependencies.network]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-network'
rev = 'fc206f3a009b64fc746202e5b4c701bf7e24d1f1'


[dependencies.primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = 'fc206f3a009b64fc746202e5b4c701bf7e24d1f1'

[dependencies.sr-io]
git = 'https://github.com/paritytech/substrate.git'
rev = 'fc206f3a009b64fc746202e5b4c701bf7e24d1f1'

[dependencies.substrate-cli]
git = 'https://github.com/paritytech/substrate.git'
rev = 'fc206f3a009b64fc746202e5b4c701bf7e24d1f1'

[dependencies.substrate-client]
git = 'https://github.com/paritytech/substrate.git'
rev = 'fc206f3a009b64fc746202e5b4c701bf7e24d1f1'

[dependencies.substrate-executor]
git = 'https://github.com/paritytech/substrate.git'
rev = 'fc206f3a009b64fc746202e5b4c701bf7e24d1f1'

[dependencies.substrate-service]
git = 'https://github.com/paritytech/substrate.git'
rev = 'fc206f3a009b64fc746202e5b4c701bf7e24d1f1'

[dependencies.transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-transaction-pool'
rev = 'fc206f3a009b64fc746202e5b4c701bf7e24d1f1'

[build-dependencies]
vergen = '3'

[[bin]]
name = 'substrate-node'
path = 'src/main.rs'
