[package]
name = "zkp-elliptic-curve"
version = "0.1.0"
description = "A crypto-grade elliptic curve over `primefield`"
repository = "https://github.com/0xProject/starkcrypto/tree/master/algebra/elliptic-curve"
keywords = ["cryptography", "elliptic", "algebra", "no-std", "wasm"]
categories = ["algorithms", "cryptography", "no-std", "wasm", "science"]
authors = [
    "Remco Bloemen <remco@0x.org>",
    "Mason Liang <mason@0x.org>",
    "Paul Vienhage <paul@0x.org>"]
readme = "Readme.md"
license = "Apache-2.0"
edition = "2018"

[dependencies]
zkp-macros-decl = { version = "0.1.0", path = "../../utils/macros-decl", default-features = false }
zkp-u256 = { version = "0.1.0", path = "../u256", default-features = false }
zkp-primefield = { version = "0.1.0", path = "../primefield", default-features = false }

no-std-compat = { version = "0.1.0", features = [ "alloc" ] }
itertools = { version = "0.8.0", default_features = false }
lazy_static = { version = "1.3.0", features = [ "spin_no_std" ] } # TODO: When `std` is set we want this feature off!
tiny-keccak = "1.5.0"
quickcheck = { version = "0.9", optional = true}
serde = { version = "1.0", features = ["derive"], optional = true}

[dev-dependencies]
criterion = "0.3.0"
quickcheck_macros = "0.8"

[[bench]]
name = "benchmark"
harness = false
required-features = ["bench"]

[features]
default = [
    "std",
    "inline"
]
std = [
    "zkp-macros-decl/std",
    "zkp-u256/std",
    "zkp-primefield/std",
    "no-std-compat/std",
    "itertools/use_std",
    "serde"
]
inline = [
    "zkp-u256/inline",
    "zkp-primefield/inline"
]
test = []
bench = []
unsafe_ecdsa = []

# Allow math in docs
[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", ".cargo/katex-header.html"]
