[package]
name = "zkp-elliptic-curve"
version = "0.1.0"
description = "A crypto-grade elliptic curve over `primefield`"
repository = "https://github.com/0xProject/starkcrypto/tree/master/algebra/elliptic-curve"
keywords = ["cryptography", "elliptic", "algebra", "no-std", "wasm"]
categories = ["algorithms", "cryptography", "no-std", "wasm", "science"]
authors = [
    "Remco Bloemen <remco@0x.org>",
    "Mason Liang <mason@0x.org>",
    "Paul Vienhage <paul@0x.org>"]
readme = "Readme.md"
license = "Apache-2.0"
edition = "2018"

[dependencies]
itertools = { version = "0.8.0", default_features = false }
lazy_static = { version = "1.3.0", features = [ "spin_no_std" ] } # TODO: When `std` is set we want this feature off!
no-std-compat = { version = "0.1.0", features = [ "alloc" ] }
quickcheck = { version = "0.9", optional = true}
serde = { version = "1.0", features = ["derive"], optional = true}
tiny-keccak = "1.5.0"
zkp-macros-decl = { version = "0.1.0", path = "../../utils/macros-decl", default-features = false }
zkp-primefield = { version = "0.1.0", path = "../primefield", default-features = false }
zkp-u256 = { version = "0.1.0", path = "../u256", default-features = false }

[dev-dependencies]
criterion = "0.3.0"
quickcheck = "0.9"
quickcheck_macros = "0.8"
zkp-primefield = { version = "0.1.0", path = "../primefield", features = ["quickcheck"] }
zkp-u256 = { version = "0.1.0", path = "../u256", features = ["quickcheck"] }

[[bench]]
name = "benchmark"
harness = false

[features]
default = [
    "inline",
    "serde",
    "std",
]
std = [
    "itertools/use_std",
    "no-std-compat/std",
    "zkp-macros-decl/std",
    "zkp-primefield/std",
    "zkp-u256/std",
]
inline = [
    "zkp-primefield/inline",
    "zkp-u256/inline",
]
unsafe_ecdsa = []

# Allow math in docs
[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", ".cargo/katex-header.html"]
