[package]
name = "zkp-elliptic-curve"
version = "0.1.0"
description = "A crypto-grade elliptic curve over `primefield`"
repository = "https://github.com/0xProject/starkcrypto/tree/master/algebra/elliptic-curve"
keywords = ["cryptography", "elliptic", "algebra", "no-std", "wasm"]
categories = ["algorithms", "cryptography", "no-std", "wasm", "science"]
authors = [
    "Remco Bloemen <remco@0x.org>",
    "Mason Liang <mason@0x.org>",
    "Paul Vienhage <paul@0x.org>"]
readme = "Readme.md"
license = "Apache-2.0"
edition = "2018"

[dependencies]
itertools = { version = "0.9.0", default_features = false }
lazy_static = { version = "1.3.0", features = [ "spin_no_std" ] } # TODO: When `std` is set we want this feature off!
no-std-compat = { version = "0.4.0", features = [ "alloc" ] }
parity-scale-codec = { version = "1.3.0", default-features = false, optional = true }
proptest = { version = "0.9.4", optional = true }
serde = { version = "1.0", features = ["derive"], default-features = false }
tiny-keccak = { version = "2.0.1", features = ["keccak"] }
zkp-macros-decl = { version = "0.1.0", path = "../../utils/macros-decl", default-features = false }
zkp-primefield = { version = "0.1.0", path = "../primefield", default-features = false }
zkp-u256 = { version = "0.1.0", path = "../u256", default-features = false }

[dev-dependencies]
criterion = "0.3.0"
proptest = "0.9.5"
zkp-primefield = { version = "0.1.0", path = "../primefield", features = ["proptest"]  }
zkp-u256 = { version = "0.1.0", path = "../u256", features = ["proptest", "proptest-derive"]  }

[[bench]]
name = "benchmark"
harness = false

[features]
default = [
    "inline",
    "std",
]
std = [
    "serde/std",
    "itertools/use_std",
    "no-std-compat/std",
    "parity-scale-codec/std",
    "zkp-macros-decl/std",
    "zkp-primefield/std",
    "zkp-u256/std",
]
inline = [
    "zkp-primefield/inline",
    "zkp-u256/inline",
]
unsafe_ecdsa = []
parity_codec = [
    "parity-scale-codec/derive",
    "zkp-primefield/parity_codec",
    "zkp-u256/parity_codec",
]

# Allow math in docs
[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", ".cargo/katex-header.html"]
