[package]
name = "primefield"
version = "0.1.0"
description = "A 251-bit prime field suitable for FFTs."
repository = "https://github.com/0xProject/starkcrypto/tree/master/algebra/prime-field"
keywords = ["cryptography", "finite", "algebra", "no-std", "wasm"]
categories = ["algorithms", "cryptography", "no-std", "wasm", "science"]
authors = [
    "Remco Bloemen <remco@0x.org>",
    "Mason Liang <mason@0x.org>",
    "Paul Vienhage <paul@0x.org>"]
readme = "Readme.md"
license = "Apache-2.0"
license-file = "../../License.md"
edition = "2018"


[dependencies]
macros-decl = { path = "../../utils/macros-decl",  default_features = false }
u256 =  { path = "../u256", default_features = false }

no-std-compat = { version = "0.1.0", features = [ "alloc" ] }
hex = { version = "", optional = true }
itertools = { version = "0.8.0", default_features = false }
crunchy = { version = "0.2.2", default_features = false }
quickcheck = { version = "0.8", optional = true}

# HACK: Criterion is really a dev-dependency, but it's important that it's
# optional, or it will enable the `std` flag on various dependencies. Cargo
# does not allow dev-dependencies to be optional.
criterion = { version = "0.2.0", optional = true }
criterion-utils = { path = "../../utils/criterion-utils", optional = true }
quickcheck_macros = { version = "0.8", optional = true }

[[bench]]
name = "benchmark"
harness = false
required-features = ["bench"]

[features]
default = [ "std" ]
bench = [
    "criterion",
    "criterion-utils",
]
test = [
    "quickcheck",
    "quickcheck_macros",
    "u256/test"
]
std = [
    "macros-decl/std",
    "u256/std",
    "no-std-compat/std",
    "itertools/use_std",
    "crunchy/std",
    "hex",
]
