[package]
name = "zkp-primefield"
version = "0.1.1"
description = "A 251-bit prime field suitable for FFTs."
repository = "https://github.com/0xProject/starkcrypto/tree/master/algebra/primefield"
keywords = ["cryptography", "finite", "algebra", "no-std", "wasm"]
categories = ["algorithms", "cryptography", "no-std", "wasm", "science"]
authors = [
    "Remco Bloemen <remco@0x.org>",
    "Mason Liang <mason@0x.org>",
    "Paul Vienhage <paul@0x.org>"]
readme = "Readme.md"
license = "Apache-2.0"
edition = "2018"


[dependencies]
zkp-macros-decl = { version = "0.1.0", path = "../../utils/macros-decl",  default_features = false }
zkp-u256 =  { version = "0.1.0", path = "../u256", default_features = false }
rand = { version = "0.7.2", optional = true }

no-std-compat = { version = "0.1.0", features = [ "alloc" ] }
hex = { version = "0.4.0", optional = true }
itertools = { version = "0.8.0", default_features = false }
crunchy = { version = "0.2.2", default_features = false }
quickcheck = { version = "0.9", optional = true}

# HACK: Criterion is really a dev-dependency, but it's important that it's
# optional, or it will enable the `std` flag on various dependencies. Cargo
# does not allow dev-dependencies to be optional.
criterion = { version = "0.3.0", optional = true }
zkp-criterion-utils = { version = "0.1.0", path = "../../utils/criterion-utils", optional = true }
quickcheck_macros = { version = "0.8", optional = true }

[[bench]]
name = "benchmark"
harness = false
required-features = ["bench"]

[features]
default = [ "std" ]
bench = [
    "criterion",
    "zkp-criterion-utils",
]
test = [
    "quickcheck",
    "quickcheck_macros",
    "zkp-u256/test"
]
std = [
    "zkp-macros-decl/std",
    "zkp-u256/std",
    "no-std-compat/std",
    "itertools/use_std",
    "crunchy/std",
    "hex",
]
# HACK: Cargo does not allow features with the same name as dependencies.
# this is fine (since optional dependencies are their own feature) but not
# if we need to enable other features as a consequence.
use_rand = [
    "rand",
    "zkp-u256/use_rand",
]

# Allow math in docs
[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", ".cargo/katex-header.html"]
