[package]
name = "zkp-primefield"
version = "0.1.1"
description = "A 251-bit prime field suitable for FFTs."
repository = "https://github.com/0xProject/starkcrypto/tree/master/algebra/primefield"
keywords = ["cryptography", "finite", "algebra", "no-std", "wasm"]
categories = ["algorithms", "cryptography", "no-std", "wasm", "science"]
authors = [
    "Remco Bloemen <remco@0x.org>",
    "Mason Liang <mason@0x.org>",
    "Paul Vienhage <paul@0x.org>"]
readme = "Readme.md"
license = "Apache-2.0"
edition = "2018"

[dependencies]
crunchy = { version = "0.2.2", default_features = false }
hex = { version = "0.4.0", optional = true }
itertools = { version = "0.9.0", default_features = false }
log = "0.4.8"
memadvise = { version = "0.1.2", optional = true }
no-std-compat = { version = "0.4.0", features = [ "alloc" ] }
num-traits = { version = "0.2.10", default_features = false }
parity-scale-codec = { version = "1.3.0", default-features = false, optional = true }
proptest = { version = "0.9.4", optional = true }
rand = { version = "0.7.2", optional = true }
rayon = { version = "1.3.0", optional = true }
serde = { version = "1.0", features = ["derive"], default_features = false }
zkp-macros-decl = { version = "0.1.0", path = "../../utils/macros-decl",  default_features = false }
zkp-u256 =  { version = "0.1.0", path = "../u256", default_features = false }

[dev-dependencies]
criterion = "0.3.0"
env_logger = "0.7.1"
num_cpus = "1.12.0"
proptest = "0.9.5"
rand = "0.7.2"
rand_xoshiro = "0.4.0"
raw-cpuid = "7.0.3"
serde_json = "1.0"
structopt = "0.3"
zkp-criterion-utils = { version = "0.1.0", path = "../../utils/criterion-utils" }
zkp-logging-allocator = { version = "0.1.0", path = "../../utils/logging-allocator" }
zkp-mmap-vec = { version = "0.1.0", path = "../../utils/mmap-vec" }
zkp-u256 =  { version = "0.1.0", path = "../u256", features = ["proptest", "proptest-derive"] }

[[bench]]
name = "benchmark"
harness = false

[features]
default = [
    "inline",
    "rand",
    "std",
]
std = [
    "crunchy/std",
    "hex",
    "itertools/use_std",
    "memadvise",
    "no-std-compat/std",
    "num-traits/std",
    "parity-scale-codec/std",
    "rayon",
    "serde/std",
    "zkp-macros-decl/std",
    "zkp-u256/std",
]
inline = [
    "zkp-u256/inline",
]
asm = [
    "zkp-u256/asm",
]
parity_codec = [
    "parity-scale-codec/derive",
    "zkp-u256/parity_codec",
]

# Allow math in docs
[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", ".cargo/katex-header.html"]
