[package]
name = "zkp-u256"
version = "0.1.1"
description = "Performant implementation of 256-bit unsigned integers"
repository = "https://github.com/0xProject/starkcrypto/tree/master/algebra/u256"
keywords = ["cryptography", "u256", "algebra", "no-std", "wasm"]
categories = ["algorithms", "cryptography", "no-std", "wasm", "science"]
authors = [
    "Remco Bloemen <remco@0x.org>",
    "Mason Liang <mason@0x.org>",
    "Paul Vienhage <paul@0x.org>"]
readme = "Readme.md"
license = "Apache-2.0"
edition = "2018"

[dependencies]
zkp-macros-decl = { version = "0.1.0", path = "../../utils/macros-decl", default_features = false }
rand = { version = "0.7.2", optional = true }

no-std-compat = { version = "0.1.0", features = [ "alloc" ] }
itertools = { version = "0.8.0", default_features = false }
crunchy = { version = "0.2.2", default_features = false }
hex = { version = "0.4.0", optional = true }
quickcheck = { version = "0.9", optional = true }

# HACK: Criterion is really a dev-dependency, but it's important that it's
# optional, or it will enable the `std` flag on various dependencies. Cargo
# does not allow dev-dependencies to be optional.
criterion = { version = "0.3.0", optional = true }
quickcheck_macros = {version = "0.8", optional = true }

[[bench]]
name = "benchmark"
harness = false
required-features = ["bench"]

[features]
default = ["std"] # Default to using the std
bench = [
    "test",
    "criterion"
]
test = [
    "std",
    "quickcheck",
    "quickcheck_macros"
]
std = [
    "zkp-macros-decl/std",
    "no-std-compat/std",
    "itertools/use_std",
    "crunchy/std",
    "hex"
]
use_rand = [
    "rand"
]

# Allow math in docs
[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", ".cargo/katex-header.html"]
