[package]
name = "zkp-u256"
version = "0.1.1"
description = "Performant implementation of 256-bit unsigned integers"
repository = "https://github.com/0xProject/starkcrypto/tree/master/algebra/u256"
keywords = ["cryptography", "u256", "algebra", "no-std", "wasm"]
categories = ["algorithms", "cryptography", "no-std", "wasm", "science"]
authors = [
    "Remco Bloemen <remco@0x.org>",
    "Mason Liang <mason@0x.org>",
    "Paul Vienhage <paul@0x.org>"]
readme = "Readme.md"
license = "Apache-2.0"
edition = "2018"

[dependencies]
crunchy = { version = "0.2.2", default_features = false }
hex = { version = "0.4.0", optional = true }
itertools = { version = "0.8.0", default_features = false }
no-std-compat = { version = "0.1.0", features = [ "alloc" ] }
num-traits = { version = "0.2.10", default_features = false }
quickcheck = { version = "0.9", optional = true }
rand = { version = "0.7.2", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true}
zkp-macros-decl = { version = "0.1.0", path = "../../utils/macros-decl", default_features = false }

[dev-dependencies]
criterion = "0.3.0"
quickcheck = "0.9"
quickcheck_macros = "0.8"

[[bench]]
name = "benchmark"
harness = false

[features]
default = [
    "inline",
    "rand",
    "std",
]
std = [
    "crunchy/std",
    "hex",
    "itertools/use_std",
    "no-std-compat/std",
    "num-traits/std",
    "serde",
    "zkp-macros-decl/std",
]
asm = []
inline = []

# Allow math in docs
[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", ".cargo/katex-header.html"]
