[package]
name = "zkp-u256"
version = "0.1.1"
description = "Performant implementation of 256-bit unsigned integers"
repository = "https://github.com/0xProject/starkcrypto/tree/master/algebra/u256"
keywords = ["cryptography", "u256", "algebra", "no-std", "wasm"]
categories = ["algorithms", "cryptography", "no-std", "wasm", "science"]
authors = [
    "Remco Bloemen <remco@0x.org>",
    "Mason Liang <mason@0x.org>",
    "Paul Vienhage <paul@0x.org>"]
readme = "Readme.md"
license = "Apache-2.0"
edition = "2018"

[dependencies]
crunchy = { version = "0.2.2", default_features = false }
hex = { version = "0.4.0", default_features = false }
itertools = { version = "0.9.0", default_features = false }
no-std-compat = { version = "0.4.0", features = [ "alloc" ] }
num-traits = { version = "0.2.10", default_features = false }
parity-scale-codec = { version = "1.3.0", default-features = false, optional = true }
proptest = { version = "0.9.4", optional = true }
proptest-derive = { version = "0.1.2", optional = true }
rand = { version = "0.7.2", optional = true }
serde = { version = "1.0", default_features = false }

[dev-dependencies]
bincode = "1.2.1"
criterion = "0.3.0"
proptest = "0.9.5"
proptest-derive = "0.1.2"
serde_json = "1.0"
zkp-macros-decl = { version = "0.1.0", path = "../../utils/macros-decl" }

[[bench]]
name = "benchmark"
harness = false

[features]
default = [
    "inline",
    "rand",
    "std",
]
std = [
    "crunchy/std",
    "hex/std",
    "itertools/use_std",
    "no-std-compat/std",
    "num-traits/std",
    "parity-scale-codec/std",
    "serde/std",
]
asm = []
inline = []
parity_codec = [
    "parity-scale-codec/derive",
]

# Allow math in docs
[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", ".cargo/katex-header.html"]
