[package]
name = "elliptic-curve-crypto"
version = "0.1.0"
description = ""
repository = "https://github.com/0xProject/starkcrypto/tree/master/crypto/elliptic-curve-crypto"
keywords = []
categories = []
authors = [
    "Remco Bloemen <remco@0x.org>",
    "Mason Liang <mason@0x.org>",
    "Paul Vienhage <paul@0x.org>"]
readme = "Readme.md"
license = "Apache-2.0"
license-file = "../../License.md"
edition = "2018"

[dependencies]
macros-decl = { path = "../../utils/macros-decl", default-features = false }
u256 = { path = "../../algebra/u256", default-features = false }
primefield = { path = "../../algebra/primefield", default-features = false }
elliptic-curve = { path = "../../algebra/elliptic-curve", default-features = false }

no-std-compat = { version = "0.1.0", features = [ "alloc" ] }
itertools = { version = "0.8.0", default_features = false }
lazy_static = { version = "1.3.0", features = [ "spin_no_std" ] } # TODO: When `std` is set we want this feature off!
tiny-keccak = "1.5.0"
quickcheck = { version = "0.8", optional = true}

# HACK: Criterion is really a dev-dependency, but it's important that it's
# optional, or it will enable the `std` flag on various dependencies. Cargo
# does not allow dev-dependencies to be optional.
criterion = { version = "0.2.0", optional = true }
quickcheck_macros = { version = "0.8", optional = true }

[[bench]]
name = "benchmark"
harness = false
required-features = ["bench"]

[features]
default = [ "std" ]
std = [
    "macros-decl/std",
    "u256/std",
    "primefield/std",
    "elliptic-curve/std",
    "no-std-compat/std",
    "itertools/use_std",
]
test = [
    "quickcheck",
    "quickcheck_macros",
    "u256/test",
    "primefield/test",
    "elliptic-curve/std",
]
bench = ["criterion"]
unsafe_ecdsa = []
